[package]
name = "helios-core"
version.workspace = true
edition = "2021"

[dependencies]
# self crates
helios-common = { path = "../common" }
helios-verifiable-api-client = { path = "../verifiable-api/client" }

# execution
alloy = { workspace = true, features = ["rand"] }
alloy-trie.workspace = true
revm.workspace = true

# async/futures
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# cache
schnellru = "0.2"

# sync
parking_lot = "0.12.2"

# misc
sha2 = "0.9"
eyre.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Gated behind the `jsonrpc-server` feature (default on). Library
# consumers that embed helios in-process do not expose a JSON-RPC
# server and can opt out via `default-features = false`, which drops
# jsonrpsee 0.19 and its old TLS/HTTP/openssl chain entirely.
jsonrpsee = { version = "0.19.0", features = ["full"], optional = true }
# Forced into the build to pin every transitive openssl consumer to
# the vendored variant. The only transitive consumer in helios is
# jsonrpsee 0.19's native-tls WS client, so this stays paired with
# `jsonrpc-server` — when the server is disabled, openssl drops out
# of the build entirely.
openssl = { workspace = true, optional = true }

[features]
default = ["jsonrpc-server"]
# Exposes `helios_core::jsonrpc::start` and the
# `From<ClientError> for jsonrpsee::core::Error` conversion. Pulls
# `jsonrpsee 0.19` and (on non-wasm) `openssl` with the `vendored`
# feature. Disable in library-style consumers that don't need to
# serve JSON-RPC over a socket.
jsonrpc-server = ["dep:jsonrpsee", "dep:openssl"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
wasmtimer.workspace = true
getrandom = { version = "0.3.1", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
helios-test-utils = { path = "../tests/test-utils" }
helios-ethereum = { path = "../ethereum" }
tempfile = "3.4.0"
